--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 /************ Custom Font ************/
 @font-face {
-    font-family: Playfair Display;
-    src: url('./assets/font/PlayfairDisplay-VariableFont_wght.ttf');
+    font-family: Roboto-Medium;
+    src: url('./assets/font/Roboto-Medium.ttf');
 }
 
 @font-face {
-    font-family: Playfair Display Italic;
-    src: url('./assets/font/PlayfairDisplay-Italic-VariableFont_wght.ttf');
+    font-family: Roboto;
+    src: url('./assets/font/Roboto-BoldItalic.ttf');
 }
 
 /************ Default CSS ************/
@@ -27,7 +27,7 @@ body {
     position: relative;
     background: linear-gradient(180deg, rgba(168, 226, 186, .9) -3%, #253a52 25.58%);
     color: #A9FE75 !important;
-    font-family: 'Playfair Display', serif !important;
+    font-family: 'Roboto', serif !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
