--- a/src/App.css
+++ b/src/App.css
@@ -536,6 +536,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     font-size: 45px;
     font-weight: 700;
     margin-bottom: 30px;
+    text-align: center;
 
 }
 
@@ -625,6 +626,8 @@ input:-webkit-autofill:active {
 /************ SuccessMsg CSS ************/
 .success {
     padding: 110px 0 80px 0;
+    text-align: center;
+
 }
 
 .success h3 {
