--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-body {
-    margin: 0;
-    font-family: 'Kaisei Opti', serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+/*body {*/
+/*    margin: 0;*/
+/*    font-family: 'Kaisei Opti', serif;*/
+/*    -webkit-font-smoothing: antialiased;*/
+/*    -moz-osx-font-smoothing: grayscale;*/
+/*}*/
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/*code {*/
+/*    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',*/
+/*    monospace;*/
+/*}*/
 
